--- a/Homework 2/Task 5/styles/styles.css
+++ b/Homework 2/Task 5/styles/styles.css
@@ -20,7 +20,7 @@ body{
     margin: 0.5%;
 }
 
-@media (min-width: 1920px)
+@media (min-width: 1080px)
 {
     .box1{
         flex-basis: 40%;
@@ -60,7 +60,7 @@ body{
     }
 }
 
-@media (min-width: 768px)
+@media (min-width: 768px) and (max-width: 1024px)
 {
     .box1{
         height: 10%;
@@ -75,7 +75,7 @@ body{
     }
 
     .box3{
-        height: 50%;
+        height: 56%;
         margin-top: 2%;
         flex-basis: 99%;
         background: red;
@@ -98,7 +98,7 @@ body{
     }
 }
 
-@media (max-width: 767px)
+@media (min-width: 320px) and (max-width: 414px)
 {
     .box1{
         height: 15%;
