--- a/Homework 2/Task 1/styles/block.css
+++ b/Homework 2/Task 1/styles/block.css
@@ -1,38 +1,73 @@
-*{
+body{
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    height: 100vh;
+    Overflow-y: hidden
 }
 
-body{
-    height: 100vh;
-    width: 100vw;
+.wrapper{
+    width: 100%;
+    height: 100%;
 }
 
 .row1{
-    display: inline-block;
-    width: 49.6vw;
-    height: 10vh;
-    background: orange;
+    height: 10%;
 }
 
 .row2{
-    display: inline-block;
-    width: 99.5vw;
-    height: 39vh;
-    background: yellow;
+    height: 40%;
 }
-
 .row3{
-    display: inline-block;
-    width: 33vw;
-    height: 29vh;
-    background: rgb(111, 191, 238);
+    height: 30%;
 }
 
 .row4{
+    height: 20%;
+}
+
+.row1, .row2, .row3, .row4{
+    width: 100%;
+    padding: 5px;
+    text-align: justify;
+    box-sizing: border-box;
+ }
+
+.row1:after, .row2:after, .row3:after, .row4:after{
+    width: 100%;
+    height: 0;
+    visibility: hidden;
+    overflow: hidden;
+    content: '';
     display: inline-block;
-    width: 24.65vw;
-    height: 19vh;
-    background: gray;
+}
+
+.row1-item{
+    background-color: orange;
+    width: 49.5%;
+    height: 100%;
+    display: inline-block;
+    text-align: left;
+}
+
+.row2-item{
+    background-color: yellow;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    text-align: left;
+}
+
+.row3-item{
+    background-color: rgb(111, 191, 238);
+    width: 32.7%;
+    height: 100%;
+    display: inline-block;
+    text-align: left;
+}
+
+.row4-item{
+    background-color: gray;
+    width: 24.3%;
+    height: 100%;
+    display: inline-block;
+    text-align: left;
 }
