--- a/Lection practice 1/Task 1/styles/styles.css
+++ b/Lection practice 1/Task 1/styles/styles.css
@@ -91,7 +91,7 @@ button{
     position: absolute;
     background-color: #f1f1f1;
     width: 45vw;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 4px 4px 6px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
@@ -181,6 +181,18 @@ button{
 
 .card-button button:active{
     font-size: 16px;
+}
+
+@media (max-width: 600px){
+    .description-text{
+        display: none;
+    }
+
+    .navigation img{
+        margin-left: 7px;
+        padding-right: 17px;
+        border-right: 1px solid gray;
+    }
 }
 
 
