--- a/Lection practice 1/Task 2/styles/styles.css
+++ b/Lection practice 1/Task 2/styles/styles.css
@@ -9,16 +9,19 @@ body{
     height: 100vh;
 }
 
-.senders-container{
+.main-container{
     display: flex;
-    position: fixed;
-    flex-wrap: wrap;
     height: 100%;
-    width: 20%;
+    width: 100%;
+}
+
+.senders-container{
+    height: 100%;
+    flex-basis: 250px;
+    flex-shrink: 0;
     overflow-y: hidden;
 }
 
-.messages-container:hover,
 .senders-container:hover{
     overflow-y: auto;
 }
@@ -45,6 +48,7 @@ body{
 
 .sender{
     display: flex;
+    align-items: center;
     width: 100%;
     height: 100px;
     background: white;
@@ -55,18 +59,11 @@ body{
     cursor: pointer;
 }
 
-.sender{
-    display: flex;
-    align-items: center;
-}
-
 .sender-photo{
     margin-left: 10px;
-    height: 80px;
-    width: 80px;
 }
 
-.sender-photo img{
+.sender-photo > img{
     height: 80px;
     width: 80px;
     border-radius: 50%;
@@ -79,32 +76,68 @@ body{
 }
 
 .messages-container{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 80%;
-    margin-left: 20%;
+    flex-basis: 100%;
+    flex-shrink: 1;
     background-image: url("../images/messages-background.jpg");
     background-size: contain;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 .sender-message,
 .own-message{
-    max-width: 80%;
-    border-radius: 10px;
-    margin: 5px;
-    padding: 5px;
-}
-
-.sender-message{
-    align-self: flex-start;
-    background: white;
+    display: flex;
+    align-items: flex-end;
+    margin: 4px 5px 4px 5px;
 }
 
 .own-message{
-    align-self: flex-end;
-    background: rgb(199, 247, 210);
+    justify-content: flex-end;
 }
+
+.sender-message{
+    justify-content: flex-start;
+}
+
+.sender-message .message-photo > img,
+.own-message .message-photo > img{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+}
+
+.sender-message .message-text,
+.own-message .message-text,
+.sender-message .message-text-without-image,
+.own-message .message-text-without-image{
+    border-radius: 10px;
+    padding: 5px;
+    max-width: 70%;
+    box-shadow: 0px 1px 3px 0px rgb(168, 168, 168);
+}
+
+.sender-message .message-text{
+    align-self: flex-start;
+    margin-left: 10px;
+    background: white;
+}
+
+.own-message .message-text{
+    align-self: flex-start;
+    margin-right: 10px;
+    background: rgb(176, 255, 160);
+}
+
+.sender-message .message-text-without-image{
+    margin-left: 60px;
+    background: white;
+}
+
+.own-message .message-text-without-image{
+    margin-right: 60px;
+    background: rgb(176, 255, 160);
+}
+
+
+
 
 
