--- a/Lection practice 1/Task 1/styles/styles.css
+++ b/Lection practice 1/Task 1/styles/styles.css
@@ -52,6 +52,7 @@
 
 .search input{
     height: 25px;
+    width: 15vw;
     padding-left: 5px;
     border-radius: 5px;
     border: 1px solid gray;
@@ -109,7 +110,7 @@ button{
 .card-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 80px;
     padding: 25px;
 }
@@ -119,6 +120,7 @@ button{
     display: inline-block;
     height: 450px;
     width: 350px;
+    min-width: 350px;
     border-radius: 20px;
     box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.808);
     margin-top: 10px;
