--- a/Lection practice 1/Task 2/styles/styles.css
+++ b/Lection practice 1/Task 2/styles/styles.css
@@ -86,12 +86,25 @@ body{
     background-size: contain;
 }
 
+.start-message{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    background: rgba(0, 0, 0, 0.384);
+    color: rgb(255, 255, 255);
+    border-radius: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
+    white-space: nowrap;
+}
+
 .messages-container-header{
     position: fixed;
     display: flex;
     height: 80px;
     align-items: center;
     border-left: 1px solid rgb(240, 240, 240);
+    border-bottom: 1px solid rgb(240, 240, 240);
     background: white;
     width: 100%;
 }
@@ -172,10 +185,14 @@ body{
     background: rgb(176, 255, 160);
 }
 
-@media (max-width: 430px){
+@media (max-width: 530px){
+    .start-message{
+       display: none;
+    }
+
     .senders-container{
        flex-basis: 190px;
-    };
+    }
 }
 
 
