--- a/Homework 6/styles/styles.css
+++ b/Homework 6/styles/styles.css
@@ -8,10 +8,138 @@ body{
     width: 100%;
 }
 
-table{
-    margin: 6px;
+#posts {
+    margin: auto;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 95%;
+    margin-bottom: 10px;
 }
 
-td{
-    border: 1px solid black;
+#posts td, #posts th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#posts tr:nth-child(even){background-color: #f2f2f2;}
+
+#posts tr:first-child {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+}
+
+.editButton,
+.deleteButton,
+.createButton,
+#popupWindowButton{
+    border-radius: 5px;
+    width: 60px;
+    height: 30px;
+    font-size: 16px;
+    color: white;
+    border-radius: 5px;
+    border: 0;
+    outline: none;
+}
+
+.editButton:hover,
+.deleteButton:hover,
+.createButton:hover,
+#popupWindowButton{
+    cursor: pointer;
+}
+
+.editButton:active,
+.deleteButton:active,
+.createButton:active,
+#popupWindowButton{
+    font-size: 15px;
+}
+
+.editButton,
+.createButton,
+#popupWindowButton{
+    background-color: rgb(76, 175, 80);
+}
+
+.editButton:hover,
+.createButton:hover,
+#popupWindowButton:hover{
+    background-color: rgb(55, 145, 58);
+}
+
+.deleteButton{
+    background-color: rgb(199, 53, 53);
+}
+
+.deleteButton:hover{
+    background-color: rgb(158, 50, 50);
+}
+
+.createButton{
+    width: 120px;
+    margin-left: 45%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.modalWindow { 
+    position: fixed; 
+    display: flex;
+    justify-content: center;
+    width: 500px;
+    background: rgb(248, 248, 248);
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    top: 15%; 
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    z-index: 2; 
+    display: none;  
+    padding: 15px;
+    border: 2px solid  rgb(56, 95, 49);
+}
+
+.modalWindow form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.modalWindow label{
+    flex-basis: 30%;
+    height: 50px;
+}
+
+.modalWindow input{
+    flex-basis: 70%;
+    height: 20px;
+}
+
+.modalWindow input:focus{
+    border: 2px solid rgb(47, 161, 47);
+}
+
+#popupWindowButton{
+    align-self: center;
+}
+
+#shadow { 
+    position: fixed;
+    width:100%;
+    height:100%;
+    z-index: 1; 
+    background:#000;
+    opacity: 0.5; 
+    left:0;
+    top:0;
+}
+
+#modalWindowTitle{
+    margin-left: 30%;
+    margin-bottom: 20px;
+    font-size: 24px;
 }
