--- a/Homework 2/Task 5/styles/styles.css
+++ b/Homework 2/Task 5/styles/styles.css
@@ -41,8 +41,7 @@ body{
     background: rgb(221, 30, 141);
 }
 
-@media (min-width: 1024px)
-{
+@media screen and (min-width: 1080px){
     .box{
         border: 3px solid white;
     }
@@ -79,8 +78,7 @@ body{
     }
 }
 
-@media (max-width: 1024px)
-{
+@media only screen and (min-width: 768px) and (max-width : 1024px){
     .box{
         border: 3px solid white;
     }
@@ -121,8 +119,7 @@ body{
     }
 }
 
-@media (max-width: 560px)
-{
+@media only screen and (min-width : 320px) and (max-width : 414px){
     .box{
         border: 3px solid white;
     }
