--- a/Homework 2/Task 4/styles/styles.css
+++ b/Homework 2/Task 4/styles/styles.css
@@ -4,18 +4,21 @@
     box-sizing: border-box;
 }
 
-header{
+.header{
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 10%;
     background: rgba(88, 145, 219, 0.5);
 }
 
-header:hover{
+.header:hover{
     background: rgba(32, 148, 84, 0.5);
 }
 
-.left-picture, .right-picture{
+.header img{
+    transform: translateY(12.5%);
     height: 80%;
 }
 
