--- a/Homework 2/Task 6/styles/styles.css
+++ b/Homework 2/Task 6/styles/styles.css
@@ -14,8 +14,16 @@ body{
     margin: 0.5%;
 }
 
+.product-image{
+    width: 100%;
+}
+
 .product-image img{
     width: 100%;
+}
+
+.main-container .product-card{
+    width: 19.5%;
 }
 
 .product-card{
@@ -44,13 +52,13 @@ body{
     color: gray;
 }
 
-@media (min-width: 1280px){
+@media only screen and (min-width: 1920px) and (min-height: 1080px){
     .main-container .product-card{
         width: 19.5%;
     }
 }
 
-@media (max-width: 1280px){
+@media only screen and (max-width: 1280px) and (max-height: 1024px){
     .main-container .product-card{
         width: 24.375%;
     }
